--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ option:focus {
 }
 @media (max-width: 800px) {
   .home-first_window-button {
-    font-size: 1rem;
+    font-size: 1.8rem;
   }
   .home-services {
     padding: 5rem 0rem;
@@ -330,8 +330,9 @@ option:focus {
     min-height: 12.9rem;
   }
   .home-services-name {
-    font-size: 0.9rem;
-    line-height: 1.1rem;
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+    margin-bottom: 0;
   }
   .home-services-img {
     margin-bottom: 1rem;
@@ -358,18 +359,22 @@ option:focus {
     margin-right: 1rem;
   }
   .pluses-name {
-    font-size: 0.8rem;
-    line-height: 0.946rem;
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+  }
+  .pluses-block {
+    padding: 0.5rem;
+    min-height: 6rem;
   }
   .plans {
     padding: 3.5rem 3rem;
   }
   .plans-title {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
     margin-bottom: 2rem;
   }
   .plans-paragraph {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-bottom: 1.5rem;
   }
   .plans-block {
@@ -380,40 +385,40 @@ option:focus {
     padding-top: 1.8rem;
   }
   .plans-block-form-title {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-bottom: 1.3rem;
   }
   .plans-block-form-name {
-    font-size: 0.8rem;
+    font-size: 1.4rem;
     margin-bottom: 0.3rem;
   }
   .plans-block-form-input {
     padding: 0.5rem 0.4rem;
     border-radius: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     margin-bottom: 1rem;
   }
   .plans-block-form-button {
     padding: 0.9rem 3rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     border-radius: 0.5rem;
     margin-bottom: 0.7rem;
   }
   .plans-block-form-span {
-    font-size: 0.6rem;
-    line-height: 0.7rem;
+    font-size: 0.9rem;
+    line-height: 1.1rem;
   }
   .plans-img {
     margin-right: 2rem;
     width: 4.5rem;
   }
   .plans-name {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-bottom: 0.6rem;
   }
   .plans-sename {
-    font-size: 0.7rem;
-    line-height: 0.8rem;
+    font-size: 1.2rem;
+    line-height: 1.3rem;
   }
   .plans-form {
     padding: 2.5rem 1.7rem;
@@ -421,7 +426,7 @@ option:focus {
 }
 @media (max-width: 450px) {
   .section-title {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
   }
   .home-first_window {
     padding-bottom: 13rem;
@@ -429,21 +434,21 @@ option:focus {
     background-size: cover;
   }
   .home-first_window-span {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     padding-top: 4rem;
   }
   .home-first_window-title {
     padding-top: 3.4rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 2.5rem;
   }
   .home-first_window-paragraph {
     margin-bottom: 4rem;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
   }
   .home-first_window-button {
-    font-size: 1rem;
-    padding: 0.9rem 3rem;
+    font-size: 1.8rem;
+    padding: 0.9rem 4rem;
     border-radius: 0.5rem;
   }
   .home-services {
@@ -454,12 +459,11 @@ option:focus {
     min-height: 0rem;
     padding: 1rem 2rem;
   }
-  .home-services-img {
-    width: 3rem;
-  }
   .home-services-img_white {
-    width: 46%;
-    align-items: center;
+    padding-left: 43%;
+  }
+  .home-services-name {
+    font-size: 1.8rem;
   }
   .home-comfort {
     padding: 0rem 0rem;
@@ -467,19 +471,26 @@ option:focus {
   .home-comfort-img {
     padding: 2rem 0rem;
   }
+  .home-comfort-paragraph {
+    font-size: 1.5rem;
+    line-height: 1.7rem;
+  }
+  .pluses-block {
+    margin-bottom: 2rem;
+  }
 }
 @media (max-width: 400px) {
   .home-first_window-span {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding-top: 2rem;
   }
   .home-first_window-title {
     padding-top: 2.2rem;
-    font-size: 1.6rem;
+    font-size: 2.2rem;
     margin-bottom: 1.5rem;
   }
   .home-first_window-paragraph {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     margin-bottom: 3rem;
   }
   .home-services-block {
@@ -487,5 +498,39 @@ option:focus {
   }
   .pluses-img {
     width: 3rem;
+  }
+  .plans-title {
+    font-size: 2rem;
+  }
+  .plans-paragraph {
+    font-size: 1.3rem;
+  }
+  .plans-name {
+    font-size: 1.6rem;
+  }
+  .plans-sename {
+    font-size: 1.4rem;
+    line-height: 1.5rem;
+  }
+  .plans-block {
+    padding: 1rem 0.5rem;
+  }
+  .plans-block-form-title {
+    font-size: 1.7rem;
+    margin-bottom: 3rem;
+  }
+  .plans-block-form-name {
+    font-size: 1.5rem;
+  }
+  .plans-block-form-input {
+    padding: 0.8rem 0.7rem;
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+  }
+  .plans-block-form-button {
+    font-size: 1.5rem;
+  }
+  .plans-img {
+    margin-right: 1rem;
   }
 }
