--- a/less/style.less
+++ b/less/style.less
@@ -91,6 +91,9 @@ a:hover{
         margin-bottom: 20rem;
     }
 }
+.none{
+    display: none;
+}
 //header
 .header{
 	position: fixed;
@@ -552,6 +555,9 @@ option{
         &:hover{
             text-decoration: underline;
         }
+    }
+    &-logo{
+        width: 6rem;
     }
     &-twice{
         display: flex;
@@ -1352,6 +1358,9 @@ option{
             &-two{
                 margin-right: 0;
             }
+        }
+        &-logo{
+            width: 10rem;
         }
     }
     //Popup
