--- a/less/style.less
+++ b/less/style.less
@@ -512,6 +512,55 @@ option{
         padding-top: 2rem;
     }
 }
+//Diskond
+.diskond{
+    padding: 7rem 0rem;
+    background: url(../img/diskond/bg.png) no-repeat center;
+    background-size: cover;
+    &-title{
+        padding: 0;
+        margin: 0;
+        text-align: center;
+        color: @light;
+        .mazzbold();
+        font-size: 2.8rem;
+    }
+}
+.whyworks{
+    padding: 4rem 0rem;
+    &-title{
+        margin-bottom: 8rem;
+    }
+    &-img{
+        width: 100%;
+        margin-bottom: 3rem;
+        &-two{
+            display: none;
+            width: 100%;
+            margin-bottom: 2rem;
+        }
+    }
+    &-button{
+        padding: 1.6rem 5rem;
+        font-size: 1.8rem;
+        &-block{
+            text-align: center;
+        }
+    }
+}
+.marks{
+    padding: 10rem 0rem;
+    &-title{
+        margin-bottom: 7rem;
+    }
+    &-img{
+        width: 100%;
+        &-two{
+            display: none;
+            width: 100%;
+        }
+    }
+}
 //Footer
 .footer{
     &-st{
@@ -1238,6 +1287,16 @@ option{
                 line-height: 1.6rem;
             }
         }
+        .diskond{
+            padding: 4rem 0rem;
+            &-title{
+                font-size: 1.8rem;
+            }
+        }
+        .marks{
+            padding: 5rem 0rem;
+           
+        }
 }
 @media(max-width: 450px){
     .section{
@@ -1429,6 +1488,25 @@ option{
             &-two{
                 text-align: center;
             }
+        }
+    }
+    .whyworks{
+        &-img{
+            display: none;
+            &-two{
+                display: block;
+            }
+        }
+    }
+    .marks{
+        &-img{
+            display: none;
+            &-two{
+                display: block;
+            }
+        }
+        &-title{
+            margin-bottom: 3rem;
         }
     }
 
